# PokerSimulator

./: .gitignore  README.md  game_history.json  pyproject.toml  requirements.txt  verify_setup.py
.github/workflows/: ci.yml
src/: cli.py  deck.py  game.py  hand_evaluator.py
tests/: test_deck.py  test_game.py  test_hand_evaluator.py
